[build-system]
requires = [
    "setuptools>=69",
]
build-backend = "setuptools.build_meta"

[project]
name = "python-ldap"
dynamic = ["version"]
description = "Python modules for implementing LDAP clients"

license = "MIT AND LicenseRef-python-ldap"
license-files = [
    "LICENCE",
    "LICENCE.MIT",
]

authors = [
    { name = "python-ldap project", email = "python-ldap@python.org" },
]
readme = { file = "README.rst", content-type = "text/x-rst" }

requires-python = ">=3.9"
keywords = ["ldap", "directory", "authentication"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",

    # "License :: OSI Approved :: Python Software Foundation License",

    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",

    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    "Topic :: Database",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP",
]

dependencies = [
    "pyasn1>=0.3.7",
    "pyasn1_modules>=0.1.5",
]

[project.urls]
Homepage = "https://www.python-ldap.org/"
Documentation = "https://python-ldap.readthedocs.io/"
Repository = "https://github.com/python-ldap/python-ldap"
Download = "https://pypi.org/project/python-ldap/"
Changelog = "https://github.com/python-ldap/python-ldap/blob/main/CHANGES"
Issues = "https://github.com/python-ldap/python-ldap/issues"

[tool.setuptools]
zip-safe = false
include-package-data = true
# Explicitly list all Python modules
py-modules = ["ldapurl", "ldif"]

[tool.setuptools.dynamic]
version = {attr = "ldap.pkginfo.__version__"}

[tool.setuptools.packages.find]
where = ["Lib"]

[tool.setuptools.package-dir]
"" = "Lib"

[tool.isort]
line_length = 88
known_first_party = ["ldap", "_ldap", "ldapurl", "ldif", "slapdtest"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.coverage.run]
branch = true
source = [
    "ldap",
    "ldif",
    "ldapurl",
    "slapdtest",
]

[tool.coverage.paths]
source = [
    "Lib/",
    ".tox/*/lib/python*/site-packages/",
]

[tool.coverage.report]
ignore_errors = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "build/htmlcov"
title = "python-ldap coverage report"
