# Package metadata (for Setuptools 30.3 and later)
[metadata]
license_file = LICENCE

# Example for setup.cfg
# You have to edit this file to reflect your system configuation

# Section for compiling the C extension module
# for wrapping OpenLDAP 2 libs
[_ldap]

# Define extra include and library dirs if needed. distutils adds non
# standard library_dirs as rpath.
# library_dirs = /usr/lib /usr/lib64 /usr/local/lib /usr/local/lib64
# include_dirs = /usr/include /usr/local/include

# These defines needs OpenLDAP built with
# ./configure --with-cyrus-sasl --with-tls
defines = HAVE_SASL HAVE_TLS HAVE_LIBLDAP_R

extra_compile_args =
extra_objects =

# Uncomment this if your libldap is not thread-safe and you need libldap_r
# instead
# Example for full-featured build:
# Support for StartTLS/LDAPS, SASL bind and reentrant libldap_r.
#libs = ldap_r lber

# Installation options
[install]
compile = 1
optimize = 1

# Linux distributors/packagers should adjust these settings
[bdist_rpm]
provides = python-ldap
requires = python libldap-2
vendor = python-ldap project
packager = python-ldap team
distribution_name = openSUSE 11.x
release = 1
doc_files = CHANGES README INSTALL TODO Demo/

# pytest, https://docs.pytest.org/en/latest/customize.html
[tool:pytest]
testpaths = Tests
python_files = t_*.py
filterwarnings =
    error
    ignore::ldap.LDAPBytesWarning
